<PreferenceScreen
    android:background="@color/colorFragmentBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/text_Setting_Connection_Tittle">
        <EditTextPreference
            android:key="key_host"
            android:title="@string/text_Setting_Connection_Host"
            android:defaultValue="0.0.0.0"
            android:dialogTitle="@string/text_Setting_Connection_Host2"/>
        <EditTextPreference
            android:key="key_port"
            android:title="@string/text_Setting_Connection_Port"
            android:defaultValue="5600"
            android:numeric="decimal"
            android:dialogTitle="@string/text_Setting_Connection_Port2"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Map">
        <EditTextPreference
            android:key="key_default_place"
            android:title="Initial location"
            android:defaultValue="Granada"
            android:dialogTitle="Enter the location where the center of the map will be located"/>

        <SwitchPreference
            android:key="key_geolocation"
            android:title="Enable geolocation"
            android:saveEnabled="false"/>

        <EditTextPreference
            android:key="key_zoom_inc"
            android:title="Map zoom increment"
            android:defaultValue="1"
            android:inputType="numberDecimal"
            android:dialogTitle="Enter the desired zoom increase"/>

        <EditTextPreference
            android:key="key_zoom"
            android:title="Map zoom"
            android:defaultValue="12"
            android:inputType="numberDecimal"
            android:dialogTitle="Enter the default map zoom"/>

        <ListPreference
            android:key="key_map_type_list"
            android:entries="@array/map_type_array"
            android:title="Map type"
            android:dialogTitle="Select the mode in which the map is displayed"
            android:entryValues="@array/map_type_array_values"/>

    </PreferenceCategory>

</PreferenceScreen>